@@ -1,5 +1,10 @@
 2004-11-26  Christophe Fergeau  <teuf@gnome.org>
 
+	* update-mime-database.c: (parse_int_value), (match_offset): use 
+	strtoul when reading an unsigned long, not strtol, fixes #1506
+
+2004-11-26  Christophe Fergeau  <teuf@gnome.org>
+
 	* update-mime-database.c: (parse_int_value): take value endianness
 	into account when reading the "mask" tag, fixes #1507.
 
